Fix button alignment with the text alignment

--- a/src/blocks/hero/styles/style.scss
+++ b/src/blocks/hero/styles/style.scss
@@ -7,91 +7,99 @@
 
 	.has-center-content {
 		text-align: center;
+
+		.wp-block-coblocks-buttons__inner {
+			justify-content: center;
+		}
 	}
 
 	.has-right-content {
 		text-align: right;
+
+		.wp-block-coblocks-buttons__inner {
+			justify-content: flex-end;
+		}
 	}
 
-	&__inner{
-		position: relative;
+	&__inner {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
-	    grid-template-rows: repeat(3, 1fr);
+		grid-template-rows: repeat(3, 1fr);
+		position: relative;
 
-		&.is-fullscreen{
+		&.is-fullscreen {
 			height: 100vh;
 		}
 
-		.wp-block-coblocks-hero__box{
+		.wp-block-coblocks-hero__box {
 			position: relative;
 		}
 
 		//grid alignment
-		&.hero-top-left-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-top-left-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
-    			grid-row: 1;
+				grid-row: 1;
 			}
 		}
 
-		&.hero-top-center-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-top-center-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
-    			grid-row: 1;
+				grid-row: 1;
 			}
 		}
 
-		&.hero-top-right-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-top-right-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
-    			grid-row: 1;
+				grid-row: 1;
 			}
 		}
 
-		&.hero-center-left-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-center-left-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
-    			grid-row: 2;
+				grid-row: 2;
 			}
 		}
 
-		&.hero-center-center-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-center-center-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
-    			grid-row: 2;
+				grid-row: 2;
 			}
 		}
 
-		&.hero-center-right-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-center-right-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
-    			grid-row: 2;
+				grid-row: 2;
 			}
 		}
 
-		&.hero-bottom-left-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-bottom-left-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 1;
-    			grid-row: 3;
+				grid-row: 3;
 			}
 		}
 
-		&.hero-bottom-center-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-bottom-center-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 2;
-    			grid-row: 3;
+				grid-row: 3;
 			}
 		}
 
-		&.hero-bottom-right-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-bottom-right-align {
+			> .wp-block-coblocks-hero__box {
 				grid-column: 3;
-    			grid-row: 3;
+				grid-row: 3;
 			}
 		}
 
-		&:not( .is-fullscreen ){
+		&:not(.is-fullscreen) {
 			&.hero-top-left-align,
 			&.hero-top-center-align,
 			&.hero-top-right-align,
@@ -100,28 +108,28 @@
 			&.hero-center-right-align,
 			&.hero-bottom-left-align,
 			&.hero-bottom-center-align,
-			&.hero-bottom-right-align{
+			&.hero-bottom-right-align {
 				grid-template-rows: auto;
 			}
 		}
 
 		&.hero-top-center-align,
 		&.hero-center-center-align,
-		&.hero-bottom-center-align{
+		&.hero-bottom-center-align {
 			h1:before,
 			h2:before {
 				margin-left: auto;
 				margin-right: auto;
 			}
-			> .wp-block-coblocks-hero__box{
+			> .wp-block-coblocks-hero__box {
 				margin: auto;
 			}
 		}
 
 		&.hero-top-right-align,
 		&.hero-center-right-align,
-		&.hero-bottom-right-align{
-			> .wp-block-coblocks-hero__box{
+		&.hero-bottom-right-align {
+			> .wp-block-coblocks-hero__box {
 				margin-left: auto;
 			}
 		}
